# AsioTgBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AsioTgBot/: CMakeLists.txt
AsioTgBot/network/: CMakeLists.txt
AsioTgBot/network/include/: dispatcher.hpp  poller.hpp  request.hpp  response.hpp  socket.hpp  tgbot.hpp
AsioTgBot/network/src/: dispatcher.cpp  poller.cpp  request.cpp  socket.cpp  tgbot.cpp
AsioTgBot/tg_types/: CMakeLists.txt
AsioTgBot/tg_types/include/: chat.hpp  message.hpp  update.hpp
AsioTgBot/tg_types/src/: message.cpp
Services/: bot.cpp  bot.hpp  network.cpp  network.hpp  request.cpp  request.hpp
TelegramSchemas/: chat.hpp  message.hpp  update.hpp  user.hpp
